recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: ')' expected but '}' found.
  }
  ^Tree:6: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:20: error: expected start of definition
	override def run() {
                 ^Tree:24: error: Unmatched closing brace '}' ignored here
}
^